--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "aos": "^2.3.4",
     "locomotive-scroll": "^5.0.0-beta.12",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "sweetalert2": "^11.11.0",
     "uvcanvas": "^0.2.1"
   },
   "devDependencies": {
